--- a/package.json
+++ b/package.json
@@ -4,23 +4,35 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "autoprefixer": "^6.3.7",
     "babel-core": "^6.11.4",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-2": "^6.11.0",
+    "css-loader": "^0.23.1",
     "eslint-config-airbnb": "^9.0.1",
     "html-webpack-plugin": "^2.22.0",
+    "node-sass": "^3.8.0",
+    "normalize-scss": "^5.0.3",
+    "postcss-loader": "^0.9.1",
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
+    "react-redux": "^4.4.5",
+    "react-router": "^2.6.0",
+    "react-router-redux": "^4.0.5",
+    "redux": "^3.5.2",
+    "redux-saga": "^0.11.0",
+    "sass-loader": "^4.0.0",
+    "style-loader": "^0.13.1",
     "webpack": "^1.13.1"
   },
   "devDependencies": {
     "eslint": "^3.1.1",
     "eslint-config-airbnb": "^9.0.1",
     "eslint-plugin-import": "^1.11.1",
-    "eslint-plugin-jsx-a11y": "^2.0.1",
-    "eslint-plugin-react": "^5.2.2"
+    "eslint-plugin-react": "^5.2.2",
+    "redux-devtools": "^3.3.1"
   },
   "scripts": {
     "postinstall": "./node_modules/.bin/webpack --config ./config/webpack.config.dev.js",
