--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "autoprefixer": "^6.3.7",
     "babel-core": "^6.11.4",
     "babel-loader": "^6.2.4",
+    "babel-plugin-transform-runtime": "^6.9.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-2": "^6.11.0",
+    "babel-regenerator-runtime": "^6.5.0",
     "css-loader": "^0.23.1",
     "eslint-config-airbnb": "^9.0.1",
     "html-webpack-plugin": "^2.22.0",
+    "isomorphic-fetch": "^2.2.1",
     "material-ui": "^0.15.2",
     "node-sass": "^3.8.0",
     "normalize-scss": "^5.0.3",
