--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "algoliasearch": "^3.18.0",
     "autoprefixer": "^6.3.7",
     "babel-core": "^6.11.4",
     "babel-loader": "^6.2.4",
@@ -26,6 +27,7 @@
     "react-router": "^2.6.0",
     "react-router-redux": "^4.0.5",
     "redux": "^3.5.2",
+    "redux-form": "^5.3.1",
     "redux-saga": "^0.11.0",
     "sass-loader": "^4.0.0",
     "style-loader": "^0.13.1",
