--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-preset-stage-2": "^6.11.0",
     "babel-regenerator-runtime": "^6.5.0",
     "css-loader": "^0.23.1",
+    "elasticsearch": "^11.0.1",
     "eslint-config-airbnb": "^9.0.1",
     "html-webpack-plugin": "^2.22.0",
     "isomorphic-fetch": "^2.2.1",
