--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,7 +16,8 @@
                 "GITHUB_CLIENT_SECRET": "",
                 "CallbackURL": "http://localhost:5000/auth/callback/",
                 "AWS_ACCESS_KEY_ID": "",
-                "AWS_SECRET_ACCESS_KEY": ""
+                "AWS_SECRET_ACCESS_KEY": "",
+                "REDIS_URL": ""
             },
             "args": []
         }
