--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "material-ui": "^0.15.2",
     "node-sass": "^3.8.0",
     "normalize-scss": "^5.0.3",
+    "octicons": "^4.4.0",
     "postcss-loader": "^0.9.1",
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
