--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "css-loader": "^0.23.1",
     "elasticsearch": "^11.0.1",
     "eslint-config-airbnb": "^9.0.1",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
     "html-webpack-plugin": "^2.22.0",
     "isomorphic-fetch": "^2.2.1",
     "material-ui": "^0.15.2",
